--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@dnd-kit/sortable": "^10.0.0",
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -38,7 +39,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-froala-wysiwyg": "^4.6.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
