--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "framer-motion": "^12.23.19",
     "froala-editor": "^4.6.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
